# kev_pna_rust

bb-3/: Cargo.toml
bb-3/src/: client.rs
project-1/: Cargo.toml
project-1/src/: lib.rs
project-2/: Cargo.toml
project-2/src/: lib.rs
project-2/tests/: tests.rs
project-3/: Cargo.toml
project-3/src/: lib.rs
project-3/tests/: cli.rs  kv_store.rs
