[package]
name = "kvs"
version = "0.1.0"
authors = ["Kevin Teh <kevin@vinequai.com>"]
description = "A key-value store"
edition = "2021"

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"

[dependencies]
clap = "2.34.0"
structopt = "0.3.25"
failure = "0.1.5"
byteorder = "1.4.3"
serde = { version = "1.0.132", features = ["derive"] }
lazy_static = "1.4.0"
tempfile = "3.0.7"
rand = "0.8.4"
rmp-serde = "0.15.5"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
sled = "0.34.7"


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.5"
predicates = "1.0.0"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false